[gd_scene load_steps=8 format=3 uid="uid://cd5hi78auc8dx"]

[ext_resource type="Texture2D" uid="uid://bv1jqksmongas" path="res://graphics/enemies/scout.png" id="1_mlx42"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_vgwds"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_axu0i"]
[ext_resource type="AudioStream" uid="uid://chwr3f4kwlcx5" path="res://audio/solid_impact.ogg" id="4_xvq0j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6fsj"]
shader = ExtResource("2_axu0i")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_twuhu"]
radius = 50.01

[sub_resource type="CircleShape2D" id="CircleShape2D_vks1y"]
radius = 920.0

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 47
script = ExtResource("1_vgwds")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_g6fsj")
position = Vector2(38, 25)
rotation = 1.5708
texture = ExtResource("1_mlx42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_twuhu")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_vks1y")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(120, 8)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(110, -30)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.35
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xvq0j")
autoplay = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
